# thesis-format-checker

./: .gitignore  README.md  pyproject.toml  whut毕业论文格式要求.md
tests/: __init__.py  helpers.py  test_checks.py  test_cli.py  test_docx_reader.py  test_rendered_pdf.py  test_report.py  test_rules.py
thesis_format_checker/: __init__.py  checks.py  cli.py  default_rules.md  docx_reader.py  model.py  rendered_pdf.py  report.py  rules.py
