[project]
name = "thesis-format-checker"
version = "0.1.0"
description = "A small CLI for checking thesis DOCX formatting against Markdown requirements."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
thesis-format-checker = "thesis_format_checker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
thesis_format_checker = ["default_rules.md"]
